--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lenis": "^1.1.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
     "three": "^0.170.0"
   },
   "devDependencies": {
