--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@react-three/fiber": "^8.17.10",
     "@web3forms/react": "^1.1.3",
     "gsap": "^3.12.5",
     "lenis": "^1.1.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
+    "remixicon": "^4.5.0",
     "three": "^0.170.0"
   },
   "devDependencies": {
