--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@gsap/react": "^2.1.1",
     "@react-three/fiber": "^8.17.10",
     "@web3forms/react": "^1.1.3",
-    "gsap": "^3.12.5",
+    "framer-motion": "^12.23.0",
+    "gsap": "^3.13.0",
     "lenis": "^1.1.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
